Tue Jun  8 17:18:28 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/NodeApplication/NodeApplication.mpc:
	* DnC/ciao/CCM_Core.mpc:
	  Fixed another set of linking problem about export macros.
		
Tue Jun  8 14:15:31 2004  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DnC/RepositoryManager/RepositoryManager.mpc:

          Added missing library CIAO_Server.

Tue Jun  8 15:50:28 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/NodeApplicationManager/NodeApplicationManager_Impl.cpp:
	  Added duplicate for one return value.

Tue Jun  8 15:00:30 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>

	* DnC/Config_Handlers/TPD_Handler.h:
	* DnC/Config_Handlers/TPD_Handler.cpp:
	* DnC/RepositoryManager/RepositoryManager_Impl.cpp:

	Added TopLevelDescription handler.

Tue Jun  8 14:29:01 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/RepositoryManager/RepositoryManager_Impl.cpp:

          Made changes to read the top level package URL
          and create the PackageConfiguration IDL data structure.

Tue Jun  8 14:15:31 2004  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DnC/Config_Handlers/Utils.h:

          Fixed the Windows export library problem.

	* DnC/RepositoryManager/RepositoryManager_Impl.cpp:

	  Added "return" to those unimplemented functions to makde the
          compiler happy.

Tue Jun  8 14:10:08 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/ciao/CCM_Core.mpc:
	  Fixed source file placement.

Tue Jun  8 10:35:32 2004  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DnC/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
	* DnC/DomainApplicationManager/DomainApplicationManager_Impl.h:

	  Added dump function to dump connections.

Tue Jun  8 10:16:48 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/RepositoryManager/Repository_Manager.cpp:

          Added diagnostic comments to aid in debugging during execution
          of the Executor.

Tue Jun  8 09:55:41 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>
